@@ -183,6 +183,8 @@ publish_selected = function() {
   <tr>
   <th><tmpl_lang Type></th>
   <td><tmpl_var type_chooser></td>
+  <th><tmpl_lang Full Text Search></th>
+  <td><input name="search_full_text" value="<tmpl_var escape=html search_full_text>"></td>
   </tr>
 
   </tbody>
