@@ -8,6 +8,11 @@ This document contains a list of changes for each release of Krang.
 
 =item *
 
+Adding full text search for text-based media objects (Javascript, HTML,
+Stylesheets, Plain Text, etc). [Michael Peters]
+
+=item *
+
 Unload/Unlock the session in a post-run hook instead of waiting until the
 full request is done (and the session object goes out of scope) so we don't
 have to wait on clients to finish getting the request before we can start
